# qimageblitz

./: CMakeLists.txt  Changelog
blitz/: CMakeLists.txt  blitz.cpp  colors.cpp  convolve.cpp  histogram.cpp  qimageblitz.h  scale.cpp
test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  scaledialog.h
